--- a/index.html
+++ b/index.html
@@ -14,35 +14,35 @@
     </header>
 
     <section id="about">
-        <h2>About Atlantic EDU</h2>
-        <p>At Atlantic EDU, we are dedicated to shaping futures through education. As the leading agency for the Newfoundland International Student Education Program in Iran, we connect ambitious students with prestigious educational opportunities in one of Canada's most breathtaking provinces – Newfoundland.</p>
+        <h2 data-en="About Atlantic EDU" data-fa="درباره آتلانتیک ادو">About Atlantic EDU</h2>
+        <p data-en="At Atlantic EDU, we are dedicated to shaping futures through education. As the leading agency for the Newfoundland International Student Education Program in Iran, we connect ambitious students with prestigious educational opportunities in one of Canada's most breathtaking provinces – Newfoundland." data-fa="در آتلانتیک ادو، ما به ایجاد آینده از طریق آموزش متعهد هستیم. به عنوان یکی از برترین نهادها برای برنامه آموزشی بین‌المللی دانشجویان نیوفاندلند در ایران، دانشجویان پرطراوت ما را با فرصت‌های آموزشی معتبر در یکی از زیباترین استان‌های کانادا، یعنی نیوفاندلند، ارتباط می‌دهیم."></p>
     </section>
 
     <section id="discover">
-        <h2>Discover Newfoundland</h2>
-        <p>Nestled on the eastern coast of Canada, Newfoundland boasts unparalleled natural beauty, vibrant cultural heritage, and a warm, welcoming community. Imagine studying against the backdrop of rugged coastlines, ancient fjords, and charming coastal towns. At Atlantic EDU, we make this dream a reality.</p>
+        <h2 data-en="Discover Newfoundland" data-fa="کشف نیوفاندلند">Discover Newfoundland</h2>
+        <p data-en="Nestled on the eastern coast of Canada, Newfoundland boasts unparalleled natural beauty, vibrant cultural heritage, and a warm, welcoming community. Imagine studying against the backdrop of rugged coastlines, ancient fjords, and charming coastal towns. At Atlantic EDU, we make this dream a reality." data-fa="در شرق کانادا، نیوفاندلند با زیبایی طبیعی بی‌نظیر، میراث فرهنگی پرانرژی و جامعه گرم و مهربان، در انتظار شماست. تصور کنید که در مقابل خطوط ساحلی دشوار، فیوردهای باستانی و شهرهای ساحلی دلنشین تحصیل می‌کنید. در آتلانتیک ادو، این رویا را به واقعیت تبدیل می‌کنیم."></p>
     </section>
 
     <section id="education">
-        <h2>World-Class Education</h2>
-        <p>Partnering with renowned educational institutions in Newfoundland, Atlantic EDU ensures that students receive a world-class education. From cutting-edge research facilities to passionate faculty members, our programs are designed to foster academic excellence and personal growth.</p>
+        <h2 data-en="World-Class Education" data-fa="آموزش برتر جهانی">World-Class Education</h2>
+        <p data-en="Partnering with renowned educational institutions in Newfoundland, Atlantic EDU ensures that students receive a world-class education. From cutting-edge research facilities to passionate faculty members, our programs are designed to foster academic excellence and personal growth." data-fa="با همکاری با موسسات آموزشی معروف در نیوفاندلند، آتلانتیک ادو اطمینان حاصل می‌کند که دانشجویان یک آموزش برتر جهانی دریافت کنند. از امکانات تحقیقاتی پیشرفته تا اعضای مشتاق هیات علمی، برنامه‌های ما برای تقویت تحصیلات علمی و رشد شخصی طراحی شده‌اند."></p>
     </section>
 
     <section id="perspective">
-        <h2>Global Perspective</h2>
-        <p>Immerse yourself in a truly international experience. Newfoundland's educational environment is enriched by a diverse community of students from around the world. Expand your horizons, build lifelong connections, and develop a global perspective that will set you apart in today's interconnected world.</p>
+        <h2 data-en="Global Perspective" data-fa="دیدگاه جهانی">Global Perspective</h2>
+        <p data-en="Immerse yourself in a truly international experience. Newfoundland's educational environment is enriched by a diverse community of students from around the world. Expand your horizons, build lifelong connections, and develop a global perspective that will set you apart in today's interconnected world." data-fa="خود را در یک تجربه واقعاً بین‌المللی غرق کنید. محیط آموزشی نیوفاندلند با جامعه گوناگون دانشجویان از سراسر جهان غنی‌تر می‌شود. افق‌های خود را گسترش دهید، ارتباطات دائمی بسازید و دیدگاه جهانی بپذیرید که شما را در دنیای امروز با یکدیگر مرتبط می‌کند."></p>
     </section>
 
     <section id="contact">
-        <h2>Contact Us</h2>
-        <p>Ready to take the first step? Contact us today for a consultation. Let Atlantic EDU be your guide to a brighter future filled with knowledge, experiences, and opportunities.</p>
+        <h2 data-en="Contact Us" data-fa="تماس با ما">Contact Us</h2>
+        <p data-en="Ready to take the first step? Contact us today for a consultation. Let Atlantic EDU be your guide to a brighter future filled with knowledge, experiences, and opportunities." data-fa="آماده‌اید قدم اول را بردارید؟ امروز با ما تماس بگیرید تا مشاوره کنید. اجازه دهید آتلانتیک ادو راهنمای شما به یک آینده روشن از دانش، تجربیات و فرصت‌ها باشد."></p>
         <address>
             <!-- Add contact details here -->
         </address>
     </section>
 
     <footer>
-        <p>&copy; 2024 Atlantic EDU. All rights reserved.</p>
+        <p data-en="&copy; 2024 Atlantic EDU. All rights reserved." data-fa="&copy; 2024 آتلانتیک ادو. تمام حقوق محفوظ است."></p>
     </footer>
 
     <script src="scripts.js"></script>
