--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<section id="about">
+        <h2 data-en="About Atlantic EDU" data-fa="درباره آتلانتیک ادو">About Atlantic EDU</h2>
+    <header>
+        <h1>Welcome to Atlantic EDU</h1>
+        <p>Your Gateway to Excellence in Newfoundland International Student Education!</p>
+        <button id="languageSwitcher">فا</button>
+    </header>
 
     <header>
         <h1>Welcome to Atlantic EDU</h1>
