--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
           <h2>under construction</h2>
         </div>
       </div>
+      <div class="row justify-content-center">
+        <div class="col-md-10">
+          <h3>Contact us:</h3>
+          <a href="mailto:mans@atlanticedu.ca" class="email-link">mans@atlanticedu.ca</a>
+          <a href="mailto:mohammad@atlanticedu.ca" class="email-link">mohammad@atlanticedu.ca</a>
+        </div>
+      </div>
       <div class="row align-items-center">
         <div class="col-sm-10 col-md-6 col-lg-6 svg-img p-5">
           <svg
